--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ app/static/assets/*
 !bot/services/__init__.py
 !bot/utils/__init__.py
 !bot/bot/__init__.py
+!payment/resources/__init__.py
+!payment/utils/__init__.py
